--- a/css/style.css
+++ b/css/style.css
@@ -500,6 +500,9 @@ form {
     opacity: 0.7;
     width: 100%;
     height: 100%;
+    background-image: var(--banner);
+    background-size: cover;
+    background-position: center;
     position: absolute; }
 
 .container-hero {
